v 0.9.2.5 (11 aug)

Log size fix
Added work in progress building tab with redesigned UI

v 0.9.1.4 (8 aug)
Added a couple of village names
Removed caps on solar rev and apocrypha, nerfed apocyrypha effect

Fixed Refrigeration not giving correct bonus
Changed uranium rate of dragons to 75%
Fixed Observatory science limit being affected by on/off switch

Reactors
Reactor Vessel

v 0.9.1.3 (4 aug)

Added couple of kitten names and one surname
Apocrypha will now have hyp cap of 2750%
Solar Revolution will now have hyp cap of 275% (sorry folks)
Log size will be limited to 50 entries

Fixed CAD SYS not applying correct bonus to the craft

Refrigeration
SETI

v 0.9.1.2 (31 jul)

Reduced Pumpjack effect from 75% to 45%
Reduced titanium price of Concrete Barns, Concrete Huts and El. Smelting
Changed Oxidation bonus to titanium form 300% to 400%
Fixed "Sacrifice Alicorns" button not being unlocked correctly
Fixed incorrect price adjustment for Ziggurat upgrades
Moved blueprints in the resource table clother to the compediums

Smelters will be turned off in IW once hit res limit

Couple of IW achievements
One super-secret achievement

CAD Systems (unlocked with Electronics)

Here be dragons.

v 0.9.0.1 (25 jul)

changed by Duke:

Fixed some issues with observe events.
_____

Added observe notification to page title in ironwill
Apocrypha effect will be carried over the reset
Fixed Fuel Injection not giving correct bonus
Fixed Labs not giving correct refine bonus
Fixed Sins of a Solar Empire not working correctly

Fixed Duke's fix not handling autoobserve correctly :)

v 0.9.0.0 (24 jul)

Fuel Injectors
Offset Press

v 0.8.9.7 (24 jul)

Apocrypha (religious upgrade, a prestige of some sort for faith)
Added new building group (industry) and rearranged buildings accordingly
Time Crystals
Oxidation

v 0.8.9.6 (23 jul)

x10 link for Sacrifice Unicorns button

v 0.8.9.5 (22 jul)

Alloy Warehouses
Concrete Warehouses
Concrete Barns
Concrete Huts

v 0.8.8.5

Concrete (T3 craft recipe)