@@ -11,19 +11,19 @@
 		
 		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.7.0/dojo/dojo.js"></script>
 		
-		<script src="./core.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./resources.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./calendar.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./buildings.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./village.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./science.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./workshop.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./diplomacy.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./economy.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./religion.js?v=0.9.1.4" type="text/javascript"></script>
-		<script src="./achievements.js?v=0.9.1.4" type="text/javascript"></script>
+		<script src="./core.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./resources.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./calendar.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./buildings.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./village.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./science.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./workshop.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./diplomacy.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./economy.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./religion.js?v=0.9.2.4" type="text/javascript"></script>
+		<script src="./achievements.js?v=0.9.2.4" type="text/javascript"></script>
 		
-		<script src="./game.js?v=0.9.1.4" type="text/javascript"></script>
+		<script src="./game.js?v=0.9.2.4" type="text/javascript"></script>
 		
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -309,8 +309,13 @@
 			.btn.modern .button_tooltip{
 				left: 300px !important;
 			}
+			
 			.btn.modern .linkBreak{
 				display: none;
+			}
+			
+			.button_tooltip .noRes {
+				color: #FF3030;
 			}
 
 			
@@ -384,7 +389,7 @@
 					<a href="#" onclick="dev();" >#</a> |
 					<a href="#" onclick="wipe();" >Wipe</a> |
 					
-					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 0.9.1.4</a>
+					<a href="#" onclick="$('#changelogDiv').toggle();">Ver 0.9.2.4</a>
 
 				</div>
 			</div>
@@ -397,9 +402,10 @@
 					Major: 9
 						Modern Age
 						
-					Minor 1: 
+					Minor 2: 
 						CAD Systems
 						Refrigeration
+						Modern UI
 						
 					Rev: 4
 						Fixes
