@@ -2,6 +2,7 @@ v 0.9.2.5 (11 aug)
 
 Log size fix
 Added work in progress building tab with redesigned UI
+Trade tab will keep panel states (collapsed/opened)
 
 v 0.9.1.4 (8 aug)
 Added a couple of village names
